--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,10 @@ phases:
       - npm install
   build:
     commands:
-      - npm run build
+      - npm run build --prod
+  post_build:
+    commands:
+      - echo Nothing to see here (post build)
 
 artifacts:
   files:
