--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,16 +9,7 @@ phases:
       - npm install
   build:
     commands:
-      - npm build --prod
+      - npm run build --prod
   post_build:
     commands:
-      - aws s3 sync dist/angular-d3 s3://angular-devops-prod --acl 'public-read' --delete
-# artifacts:
-#   files:
-#     - "assets/*.json"
-#     - "**/*.hmtl"
-#     - "**/*.js"
-#     - "**/*.css"
-#     - "**/*.ico"
-#   discard-paths: yes
-#   base-directory: "dist/angular-d3"
+      - aws s3 sync ./dist/angular-d3 s3://angular-devops-prod --acl 'public-read' --delete
