--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,12 +6,18 @@ phases:
       nodejs: 10
     commands:
       - echo Install Phase
+      - yum update
+      - npm install -g @angular/cli
   pre_build:
     commands:
       - npm install
   build:
     commands:
-      - npm run build
+#      - npm run build
+      - ng build --prod --aot
+  post_build:
+    commands:
+      -aws s3 sync ./dist/angular-d3 d3://mmenard-dhi-okr-host-prod --delete
 
 artifacts:
   files:
