--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "axios": "^0.19.0",
     "core-js": "^2.5.4",
     "d3": "^5.5.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
