--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,8 +13,8 @@ phases:
       - npm install
   build:
     commands:
-#      - npm run build
-      - ng build --prod --aot
+      - npm run build
+#      - ng build --prod --aot
   post_build:
     commands:
       -aws s3 sync ./dist/angular-d3 d3://mmenard-dhi-okr-host-prod --delete
