--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
       nodejs: 10
     commands:
       - echo Install Phase
-      - apt-get update
-      - npm install -g @angular/cli
+#      - apt-get update
+#      - npm install -g @angular/cli
   pre_build:
     commands:
       - npm install
@@ -17,7 +17,8 @@ phases:
 #      - ng build --prod --aot
   post_build:
     commands:
-      -aws s3 sync ./dist/angular-d3 d3://mmenard-dhi-okr-host-prod --delete
+      - echo Post Build Phase
+#      -aws s3 sync ./dist/angular-d3 d3://mmenard-dhi-okr-host-prod --delete
 
 artifacts:
   files:
